fix issue with weird background on mobile

--- a/nfts-and-daos-poap/styles/Home.module.css
+++ b/nfts-and-daos-poap/styles/Home.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 40px;
+  padding-top: 55px;
 }
 
 .container {
@@ -12,7 +12,7 @@
   width: 100%;
   max-width: 500px;
   padding: 0rem;
-  margin-top: 50px;
+  margin-top: 125px;
 }
 
 .title {
