--- a/nfts-and-daos-poap/styles/globals.css
+++ b/nfts-and-daos-poap/styles/globals.css
@@ -8,6 +8,8 @@ body {
   opacity: 0.85;
   background-image: radial-gradient(circle at center center, #444cf7, #e5e5f7), repeating-radial-gradient(circle at center center, #444cf7, #444cf7, 10px, transparent 20px, transparent 10px);
   background-blend-mode:overlay;
+  height: 100%;
+  width: 100%;
   }
 
 a {
